--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="my_email">ankit.singh4x@gmail.com</string>
     <string name="phone_no">Phone no:</string>
     <string name="_8789286009">8789286009</string>
+    <string name="feedback">Feedback</string>
 </resources>
