Added new activity called "FeedbackActivity.kt" and it's xml file "activity_feedback.xml" it's just frontend for feedback feature...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="phone_no">Phone no:</string>
     <string name="_8789286009">8789286009</string>
     <string name="feedback">Feedback</string>
+    <string name="feedback_scn_msg">Any feedback or suggestions would be appreciated</string>
+    <string name="message">Message</string>
+    <string name="send">SEND</string>
+    <string name="show_password">Show password</string>
 </resources>
